@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
  <notes>
+* [cjh] Strip utm_ parameters from incoming bookmarks, and provide a script to strip them from already-saved bookmarks (Request #10751)
 * [cjh] Implement listTagInfo and searchTags API calls for Trean (Bug #11816)
 * [cjh] Fix fetching, saving, and display of favicons
  </notes>
@@ -539,6 +540,7 @@
    <date>2012-11-27</date>
    <license uri="http://www.horde.org/licenses/bsd">BSD-2-Clause</license>
    <notes>
+* [cjh] Strip utm_ parameters from incoming bookmarks, and provide a script to strip them from already-saved bookmarks (Request #10751)
 * [cjh] Implement listTagInfo and searchTags API calls for Trean (Bug #11816)
 * [cjh] Fix fetching, saving, and display of favicons
    </notes>
