@@ -2,6 +2,8 @@
 v1.0.0-git
 ----------
 
+[cjh] Strip utm_ parameters from incoming bookmarks, and provide a script to
+      strip them from already-saved bookmarks (Request #10751)
 [cjh] Implement listTagInfo and searchTags API calls for Trean (Bug #11816)
 [cjh] Fix fetching, saving, and display of favicons
 
